; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/class/extr_cdc-wdm.c_free_urbs.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/usb/class/extr_cdc-wdm.c_free_urbs.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.wdm_device = type { i32, i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.wdm_device*)* @free_urbs to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @free_urbs(%struct.wdm_device* %0) #0 {
  %2 = alloca %struct.wdm_device*, align 8
  store %struct.wdm_device* %0, %struct.wdm_device** %2, align 8
  %3 = load %struct.wdm_device*, %struct.wdm_device** %2, align 8
  %4 = getelementptr inbounds %struct.wdm_device, %struct.wdm_device* %3, i32 0, i32 2
  %5 = load i32, i32* %4, align 4
  %6 = call i32 @usb_free_urb(i32 %5)
  %7 = load %struct.wdm_device*, %struct.wdm_device** %2, align 8
  %8 = getelementptr inbounds %struct.wdm_device, %struct.wdm_device* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 4
  %10 = call i32 @usb_free_urb(i32 %9)
  %11 = load %struct.wdm_device*, %struct.wdm_device** %2, align 8
  %12 = getelementptr inbounds %struct.wdm_device, %struct.wdm_device* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @usb_free_urb(i32 %13)
  ret void
}

declare dso_local i32 @usb_free_urb(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
